--- a/iterate-dict.yml
+++ b/iterate-dict.yml
@@ -1,7 +1,5 @@
-# Ansible Playbook
-# Iterates trough a dictionary
-
-- hosts: servers
+- name: Iterates trough a dictionary
+  hosts: servers
   vars:
     ssh_keys:
       key1: key1
