--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,17 @@
 # https://gist.github.com/rothgar/8793800
 # tasks/hosts.yml
 - name: Generate /etc/hosts file
-  template:
-    src=hosts.j2
-    dest=/etc/hosts
+  connection: local
+  become: false
+  gather_facts: No
+  hosts: localhost
+
+  vars:
+    - localdomain: intra
+
+  tasks:
+    - debug: msg="{{ groups }}"
+    - debug: msg="{{ groups['servers'] }}"
+    - template:
+        src: hosts.j2
+        dest: hosts
