Add additional example

--- a/hosts.yml
+++ b/hosts.yml
@@ -1,10 +1,7 @@
 # https://gist.github.com/rothgar/8793800
 # tasks/hosts.yml
 - name: Generate /etc/hosts file
-  connection: local
-  become: false
-  gather_facts: No
-  hosts: localhost
+  hosts: servers
 
   vars:
     - localdomain: intra
@@ -14,4 +11,4 @@
     - debug: msg="{{ groups['servers'] }}"
     - template:
         src: hosts.j2
-        dest: hosts
+        dest: /etc/hosts
