--- a/named-list.yml
+++ b/named-list.yml
@@ -2,24 +2,28 @@
   hosts: servers
   gather_facts: false
   vars:
+    rsyslog_srv:       logz.io # set this to use the correct service
     rsyslog_tls:       true
     rsyslog_tag:       syslog
-    rsyslog_srv:       loggly.com
     rsyslog_cert:      syslogca.crt
     rsyslog_cert_path: /etc/rsyslog.d/keys/ca.d
     services:
-      loggly:
+      loggly.com:
         token:      YOUR_TOKEN_GOES_HERE
         peer:       "*.loggly.com"
         url:        logs-01.loggly.com
+        cert_name:  syslogca.crt
+        cert_path:  https://logdog.loggly.com/media/
         port:       514
         port_tls:   6514
-      logzio:
+      logz.io:
         token:      YOUR_TOKEN_GOES_HERE
         peer:       "*.logz.io"
-        url:        logs-01.loggly.com
-        port:       514
-        port_tls:   6514
+        url:        listener.logz.io
+        cert_name:  COMODORSADomainValidationSecureServerCA.crt
+        cert_path:  https://raw.githubusercontent.com/logzio/public-certificates/master/
+        port:       5000
+        port_tls:   5015
 
   tasks:
   - name: Iterate over list
@@ -27,5 +31,5 @@
     with_dict: "{{ services }}"
     delegate_to: localhost
   - name: List specifc items
-    debug: "msg=val={{ services['loggly'].peer }}"
+    debug: "msg=val={{ services[rsyslog_srv].cert_path }}"
   
